# elfshaker

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Cargo.toml  NOTES_WIN64.md  main.cpp
.github/workflows/: ci-cmake.yaml  ci.yaml  clippy.yml  rust.yml
.tipi/: deps  distro.json  env  id  opts.linux-cxx17
cmake/modules/: Config.cmake.in
contrib/corrosion/cmake/: Corrosion.cmake
src/: atomicfile.rs  clone.rs  extract.rs  find.rs  lib.rs  list.rs  log.rs  loosen.rs  pack.rs  packidx.rs  show.rs  status.rs  store.rs  update.rs  utils.rs
src/repo/: fs.rs  mod.rs  pack.rs  remote.rs  repository.rs
test-scripts/artifacts/: verification.pack  verification.pack.idx
tests/: CMakeLists.txt  cli.rs  test_cxxbridge.cpp
