# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2021 Arm Limited or its affiliates and Contributors. All rights reserved.

[package]
name = "elfshaker"
version = "0.1.0"
authors = ["Veselin Karaganev <veselin.karaganev@arm.com>", "Peter Waller <peter.waller@arm.com>"]
edition = "2018"

[[bin]]
name = "elfshaker_executable"
path = "src/bin/main.rs"

[lib]
name = "elfshaker"
crate-type=["lib", "staticlib"]

[dependencies]
cxx = "1.0"
zstd = { version = "0.9.2", features = ["zstdmt"] }
crossbeam-utils = "0.8"
walkdir = "2.3.2"
clap = "2.34.0"
rust-crypto = "0.2.36"
hex = "0.4.3"
chrono = "0.4.19"
url = "2.2.2"
ureq = "2.4.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
rmp-serde = "0.15.5"
num_cpus = "1.13.0"
log = "0.4.0"
lazy_static = "1.4.0"
rand = "0.8.0"
fs2 = "0.4.3"
filetime = "0.2.19"
same-file = "1.0.6"
threadpool = "1.8.1"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
cfg-if = "1.0.0"
predicates = "3.0.2"
